--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,7 +16,11 @@
 <body class="d-flex flex-column vh-100 justify-content-between">
     <%- include('../shared/nav') %> 
     <%- include('../shared/sidenav') %> 
-    <%- body %> 
+    <main class="container my-5">
+        <div>
+            <%- body %> 
+        </div>
+    </main>
     <%- include('../shared/footer') %> 
 </body>
 </html>
