--- a/views/inventory/new.ejs
+++ b/views/inventory/new.ejs
@@ -3,23 +3,23 @@
 <form action="/inventory" method="post" class="form-size">
     <h2 class="mb-4">Add new item</h2>
     <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="name" required name="name" placeholder="name">
+        <input type="text" class="form-control" id="name" required name="name" placeholder="name" minlength="5" maxlength="60">
         <label for="name">Name</label>
     </div>
     <div class="form-floating mb-3">
-        <input type="number" class="form-control" id="price" required name="price" placeholder="price">
+        <input type="number" class="form-control" id="price" required name="price" placeholder="price" min="0">
         <label for="price">Price</label>
     </div>
     <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="manufacturer" name="manufacturer" placeholder="manufacturer">
+        <input type="text" class="form-control" id="manufacturer" value="local" maxlength="60" name="manufacturer" placeholder="manufacturer">
         <label for="manufacturer">Manufacturer</label>
     </div>
     <div class="form-floating mb-3">
-        <input type="number" class="form-control" id="manufacturer_price" required name="manufacturer_price" placeholder="manufacturer_price">
+        <input type="number" class="form-control" id="manufacturer_price" min="0" required name="manufacturer_price" placeholder="manufacturer_price">
         <label for="manufacturer_price">Manufacturer price</label>
     </div>
     <div class="form-floating mb-3">
-        <input type="number" class="form-control" id="stock" name="stock" placeholder="stock" value="50">
+        <input type="number" class="form-control" id="stock" min="0" name="stock" placeholder="stock" value="50">
         <label for="stock">Stock</label>
     </div>
     <div class="mb-3">
