--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,9 +17,8 @@
     <%- include('../shared/nav') %> 
     <%- include('../shared/sidenav') %> 
     <main class="container my-5">
-        <div>
-            <%- body %> 
-        </div>
+        <%- include('../shared/flash') %> 
+        <%- body %>
     </main>
     <%- include('../shared/footer') %> 
 </body>
