--- a/views/shared/flash.ejs
+++ b/views/shared/flash.ejs
@@ -1,13 +1,17 @@
 <% if(successMsg.length){ %>
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <div class="alert alert-success alert-dismissible fade show my-4" role="alert">
         <p class="mb-0"><i class="fa fa-check"></i> <%= successMsg %>  </p>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
 <% } %>  
 
 <% if(errorMsg.length){ %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <p class="mb-0"><i class="fa fa-exclamation-triangle"></i> <%= errorMsg %>  </p>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="alert alert-danger alert-dismissible fade show my-4" role="alert">
+        <p class="mb-0"><i class="fa fa-check"></i> <%= errorMsg %>  </p>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
     </div>
 <% } %>  
