--- a/views/bill/new.ejs
+++ b/views/bill/new.ejs
@@ -2,18 +2,26 @@
 
 <form action="/bill" method="post">
     <div class="my-3">
-        <input type="text" name="customer_name" placeholder="customer name">
+        <label>Customer name</label>
+        <input type="text" class="form-control" name="customer_name">
     </div>
     <div class="my-3">
-        <input list="items" type="text" name="item[id]" placeholder="item id">
-        <input type="number" name="item[quantity]" value="1" placeholder="quantity">
+        <label>Customer phone</label>
+        <input type="text" class="form-control" name="customer_phone">
+    </div>
+    <div class="mt-3">
+        <p class="lead">Items</p>
+    </div>
+    <div class="d-flex my-3">
+        <input class="form-control" list="items" type="text" name="item[id]" placeholder="item id">
+        <input class="form-control" type="number" name="item[quantity]" value="1" min="0" placeholder="quantity">
     </div>
     <div id="fields-container"></div>
     <div class="mb-5">
-        <button type="button" id="add-more">More</button>
+        <button type="button" class="btn btn-sm btn-primary" id="add-more"><i class="fa fa-add"></i></button>
     </div>
     <div class="my-3">
-        <button type="submit">Proceed</button>
+        <button type="submit" class="btn btn-success">Proceed</button>
     </div>
 </form>
 
