--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,21 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billing and Inventory Managment</title>
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- css -->
-    <link rel="stylesheet" href="/index.css">
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link rel="stylesheet" href="/style.css">
+    <link href="/sb-admin-2.min.css" rel="stylesheet">
+    <!-- datatable -->
+    <link rel="stylesheet" href="/dataTables.bootstrap4.min.css">
+
 </head>
-<body class="d-flex flex-column vh-100 justify-content-between">
-    <%- include('../shared/nav') %> 
-    <%- include('../shared/sidenav') %> 
-    <main class="container my-5">
-        <%- include('../shared/flash') %> 
-        <%- body %>
-    </main>
-    <%- include('../shared/footer') %> 
+<body id="page-top">
+
+        <!-- Page Wrapper -->
+        <div id="wrapper">
+
+            <!-- Sidebar -->
+            <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
+    
+                <!-- Sidebar - Brand -->
+                <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
+                    <div class="sidebar-brand-icon">
+                        <i class="fa fa-code"></i>
+                    </div>
+                    <div class="sidebar-brand-text mx-3">Billing System</div>
+                </a>
+    
+                <!-- Divider -->
+                <hr class="sidebar-divider my-0">
+    
+                <!-- Nav Item - Dashboard -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">
+                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                        <span>Dashboard</span></a>
+                </li>
+    
+                <!-- Divider -->
+                <hr class="sidebar-divider">
+    
+                <!-- Heading -->
+                <div class="sidebar-heading">
+                    Actions
+                </div>
+    
+                <li class="nav-item">
+                    <a class="nav-link" href="/bill">
+                        <i class="fa fa-fw fa-plus"></i>
+                        <span>Bill</span>
+                    </a>
+                </li>
+    
+                <li class="nav-item">
+                    <a class="nav-link" href="/inventory">
+                        <i class="fa fa-fw fa-wrench"></i>
+                        <span>Inventory</span>
+                    </a>
+                </li>
+    
+            </ul>
+            <!-- End of Sidebar -->
+    
+            <!-- Content Wrapper -->
+            <div id="content-wrapper" class="d-flex flex-column">
+    
+                <!-- Main Content -->
+                <div id="content">
+    
+                    <!-- Topbar -->
+                    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+    
+                        
+                        <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                            <i class="fa fa-bars"></i>
+                        </button>
+    
+                        <!-- Topbar Navbar -->
+                        <ul class="navbar-nav ml-auto">
+                            <li class="dropdown">
+                                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
+                                  <%= user.username %> 
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <form action="/logout" class="dropdown-item" method="post">
+                                        <button class="btn" type="submit">Logout</button>
+                                    </form>
+                                </div>
+                            </li>
+                        </ul>
+    
+                    </nav>
+                    <!-- End of Topbar -->
+    
+                    <!-- Begin Page Content -->
+                    <div class="container-fluid">
+                        <%- include('../shared/flash') %> 
+                        <%- body %>
+                    </div>
+                    <!-- /.container-fluid -->
+    
+                </div>
+                <!-- End of Main Content -->
+    
+                <!-- Footer -->
+                <!-- <footer class="sticky-footer bg-white">
+                    <div class="container my-auto">
+                        <div class="copyright text-center my-auto">
+                            <span>Copyright &copy; Backend created by saqib aziz</span>
+                        </div>
+                    </div>
+                </footer> -->
+                <%- include('../shared/footer')  %> 
+                <!-- End of Footer -->
+    
+            </div>
+            <!-- End of Content Wrapper -->
+    
+        </div>
+        <!-- End of Page Wrapper -->
+    
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top">
+            <i class="fa fa-angle-up"></i>
+        </a>
+    
+        <!-- Bootstrap core JavaScript-->
+        <script src="/jquery.min.js"></script>
+        <script src="/bootstrap.bundle.min.js"></script>
+    
+        <!-- Core plugin JavaScript-->
+        <script src="/jquery.easing.min.js"></script>
+    
+        <!-- Custom scripts for all pages-->
+        <script src="/sb-admin-2.min.js"></script>
+        
+
+    
+</body>
+    
 </body>
 </html>
